<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_panel_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary_f2f2f2"
    tools:ignore="ContentDescription, LabelFor">
    
    <!--Background-->
    
    <include
        android:id="@+id/top_bg"
        layout="@layout/cell_new_account_primary_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    
    <include
        android:id="@+id/primary_bg_1"
        layout="@layout/cell_new_account_primary_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/top_bg" />
    
    <include
        android:id="@+id/primary_bg_2"
        layout="@layout/cell_new_account_primary_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/primary_bg_1"
        android:layout_marginTop="10dp" />
    
    <include
        android:id="@+id/primary_bg_3"
        layout="@layout/cell_new_account_primary_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/primary_bg_2"
        android:layout_marginTop="10dp" />
    
    <!--top bar-->
    <ImageButton
        android:id="@+id/new_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/ic_close_20dp" />
    
    <TextView
        android:id="@+id/new_btn_top_save"
        style="@style/edit_text_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="14dp"
        android:text="@string/new_account_btn_save" />
    
    <!--primary edt-->
    <EditText
        android:id="@+id/new_edt_title"
        style="@style/new_account_edt"
        android:layout_alignTop="@+id/primary_bg_1"
        android:hint="@string/new_account_hint_title" />
    
    <EditText
        android:id="@+id/new_edt_username"
        style="@style/new_account_edt"
        android:layout_alignTop="@+id/primary_bg_2"
        android:hint="@string/new_account_hint_username" />
    
    <EditText
        android:id="@+id/new_edt_password"
        style="@style/new_account_edt"
        android:layout_alignTop="@+id/primary_bg_3"
        android:hint="@string/new_account_hint_password"
        android:inputType="textPassword" />
    
    <!--secondary buttons-->
    <!-- expected size=48x48, drawable size=58x58 -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/new_btn_photo"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/new_account_avatar_bg_oval"
        android:paddingBottom="4dp"
        android:paddingEnd="4dp"
        android:src="@drawable/ic_camera_48dp"
        tools:ignore="RtlSymmetry" />
    
    <TextView
        android:id="@+id/secondary_title"
        style="@style/general_text"
        android:layout_below="@+id/primary_bg_3"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_account_text_like_a_tailor_made" />
    
    <Button
        android:id="@+id/new_btn_note"
        style="@style/new_account_btn"
        android:layout_below="@+id/secondary_title"
        android:layout_marginStart="20dp"
        android:text="@string/new_account_btn_note" />
    
    <Button
        android:id="@+id/new_btn_favor"
        style="@style/new_account_btn"
        android:layout_below="@+id/secondary_title"
        android:layout_centerHorizontal="true"
        android:text="@string/new_account_btn_add_favor" />
    
    <Button
        android:id="@+id/new_btn_save"
        style="@style/new_account_btn"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/secondary_title"
        android:layout_marginEnd="20dp"
        android:text="@string/new_account_btn_save" />
    
    <!--card overview-->
    <!--original size = 100x176, drawable size = 120x196-->
    <!--TODO:
        注意：
        如果手机有虚拟导航栏，则不使用`android:layout_marginBottom="20dp"`
        如果没有虚拟导航栏，则使用`android:layout_marginBottom="20dp"`-->
    <HorizontalScrollView
        android:id="@+id/new_panel_card_board"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/new_panel_extension"
        android:layout_below="@+id/new_btn_save">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:divider="@drawable/divider_24dp"
            android:orientation="horizontal"
            android:showDividers="middle|end">
            
            <include
                android:id="@+id/card_memo"
                layout="@layout/card_memo"
                android:layout_width="100dp"
                android:layout_height="176dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:transitionName="shared_card_memo" />
            
            <include
                android:id="@+id/card_social_login"
                layout="@layout/card_social_login" />
            
            <include
                android:id="@+id/card_group"
                layout="@layout/card_group" />
            
            <include
                android:id="@+id/card_portrait"
                layout="@layout/card_group" />
            
            <include
                android:id="@+id/card_password_level"
                layout="@layout/card_memo" />
            
            <include layout="@layout/card_memo" />
            
            <include layout="@layout/card_memo" />
        
        </LinearLayout>
    </HorizontalScrollView>
    
    <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
    
    <!--bottom extension panel-->
    <ImageView
        android:id="@+id/new_panel_extension"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/rare_extension_panel_bg" />
    
    <ImageView
        android:layout_width="80dp"
        android:layout_height="6dp"
        android:layout_alignTop="@+id/new_panel_extension"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:background="@drawable/new_account_btn_extension_drag" />
    
    <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
    
    <ImageView
        android:id="@+id/new_bg_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/shadow_bg_60c000000"
        android:clickable="true"
        android:elevation="12dp"
        android:focusable="true"
        android:visibility="gone" />
    
    <!--□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□□-->
    
    <!--Axure shadow_primary_35c000000, x=0, y=8, blur=24-->
    <!--<EditText
        style="@style/card_edt"
        android:layout_marginTop="640dp" />-->
    
    <include
        android:id="@+id/card_memo_active"
        layout="@layout/card_memo_active"
        android:visibility="gone" />
    
    <include
        android:id="@+id/card_social_login_active"
        layout="@layout/card_social_login_active"
        android:visibility="gone" />
    
    <FrameLayout
        android:id="@+id/edit_frag_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="24dp" />

</RelativeLayout>